<resources>
    <string name="app_name">Notification Log</string>
    <string name="add">Add</string>
    <string name="add_app_to_the_blacklist">Add \"#APP_NAME#\" to the blacklist</string>
    <string name="add_new_group">New group</string>
    <string name="add_new_model">New model</string>
    <string name="add_new_template">New template</string>
    <string name="add_package_to_the_blacklist">Add package to the blacklist</string>
    <string name="add_to_the_blacklist">Add to the blacklist</string>
    <string name="added_to">Added to</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="added_to_the_list">Added to the list</string>
    <string name="administrator">Administrator</string>
    <string name="ads_app_id">ca-app-pub-5125690783344160~4874174770</string>
    <string name="ads_notification_preview_banner_id">ca-app-pub-5125690783344160/8531468312</string>
    <string name="ads_notifications_banner_id">ca-app-pub-5125690783344160/6542479663</string>
    <string name="ads_notifications_interstitial_id">ca-app-pub-5125690783344160/2393026251</string>
    <string name="all">All</string>
    <string name="all_groups">Groups</string>
    <string name="all_models">Models</string>
    <string name="all_templates">Templates</string>
    <string name="app_help_info">"IMPORTANT: Enable Notification Access.
The app must be able to read all notifications posted by the system or any installed app.
When you first start you need to enable access to notifications.
Click on the bell button to access the permission view and make sure that access to notifications is enabled for this app.

IMPORTANT
You can not see the notifications you received before installing this application."</string>
    <string name="app_info">App info</string>
    <string name="app_info_name">Name</string>
    <string name="app_info_name_detail">The name of the app that posted the notification</string>
    <string name="app_info_package_name">Package name</string>
    <string name="app_info_package_name_detail">The package of the app that posted the notification</string>
    <string name="app_name_label">App name</string>
    <string name="backup">Backup</string>
    <string name="backup_action">BACKUP</string>
    <string name="backup_data_pro">Backup and restore data (PRO)</string>
    <string name="backup_failed">Backup failed</string>
    <string name="backup_successful">Backup successful</string>
    <string name="blacklist">Blacklist</string>
    <string name="blacklist_deleted_successfully">Black list successfully deleted</string>
    <string name="blacklist_help_info">"Notifications of selected apps will be ignored.
By default, the system saves all notifications."</string>
    <string name="blacklist_package_deleted_successfully">Package successfully removed from the blacklist</string>
    <string name="cancel">Cancel</string>
    <string name="change_or_revoke_consent">Change or revoke consent</string>
    <string name="color">Color</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="contact_support">Contact Support</string>
    <string name="contact_support_info">"Got any queries or facing problems? I'm happy to help!"</string>
    <string name="copy_list_to_the_clipboard">Copy list to the clipboard</string>
    <string name="database_does_not_exist">The database does not exist</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="date_today">Today</string>
    <string name="date_yesterday">Yesterday</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_groups_confirmation">Are you sure you want to delete all groups?</string>
    <string name="delete_all_models_confirmation">Are you sure you want to delete all models?</string>
    <string name="delete_all_notifications_confirmation">Are you sure you want to delete all notifications?</string>
    <string name="delete_all_selected_templates_confirmation">Are you sure you want to delete all selected templates?</string>
    <string name="delete_all_templates_confirmation">Are you sure you want to delete all templates?</string>
    <string name="delete_app_notifications">Delete all \"#APP_NAME#\" notifications</string>
    <string name="delete_blacklist_confirmation">Are you sure you want to delete the blacklist?</string>
    <string name="delete_blacklist_package_confirmation">Are you sure you want to remove this package from the blacklist?</string>
    <string name="delete_group">Delete group</string>
    <string name="delete_model">Delete model</string>
    <string name="delete_notification_confirmation">Are you sure you want to delete this notification?</string>
    <string name="delete_selected">Delete selected</string>
    <string name="delete_template">Delete template</string>
    <string name="description">Description</string>
    <string name="disable_all">Disable all</string>
    <string name="disabled">disabled</string>
    <string name="donate">Donate</string>
    <string name="edit_group">Edit group</string>
    <string name="edit_model">Edit model</string>
    <string name="edit_template">Edit template</string>
    <string name="email_support">Email support</string>
    <string name="empty_fields_message">One or more fields are empty</string>
    <string name="enable_all">Enable all</string>
    <string name="enable_all_notifications_confirmation">Are you sure you want to enable all notifications?</string>
    <string name="enable_notification_access_permission_action">Click the button below, enable the permission for \"#APP_NAME#\" and click back.</string>
    <string name="enable_notification_access_permission_message">To store all your upcoming notifications, \"#APP_NAME#\" needs Notification Access permission.</string>
    <string name="enable_permission">Enable Permission</string>
    <string name="enable_permission_action">ENABLE PERMISSION</string>
    <string name="enabled">enabled</string>
    <string name="error">Error</string>
    <string name="exit">Exit</string>
    <string name="favorites">Favorites</string>
    <string name="file_path">File path</string>
    <string name="folder_path">Folder path</string>
    <string name="full_packages_list">Full packages list</string>
    <string name="generate_new_backup_file">Generate a new backup file</string>
    <string name="generous_donation_message">This project is simply awesome</string>
    <string name="generous_donation_title">Generous</string>
    <string name="go_premium">Go Premium</string>
    <string name="go_premium_be_happy">Go Premium. Be happy.</string>
    <string name="go_premium_detail">"Get the most out of \"#APP_NAME#\" with Premium upgrade!

#PREMIUM_BENEFITS#

This small contribution allows me to offer a better service.
Your donation is very much appreciated!"</string>
    <string name="go_premium_one_purchase">Go Premium</string>
    <string name="go_premium_one_purchase_detail">Unlock all premium features with just one purchase!</string>
    <string name="go_premium_one_purchase_note">This option allows you to have unlimited and definitive access to all current and future features</string>
    <string name="group">Group</string>
    <string name="group_already_exists">This group already exists</string>
    <string name="group_deleted_successfully">Group deleted successfully</string>
    <string name="group_does_not_exist">This group does not exist</string>
    <string name="groups_deleted_successfully">Groups deleted successfully</string>
    <string name="help">Help</string>
    <string name="ignore_future_notifications">Ignore future notifications</string>
    <string name="ignore_future_notifications_alert">The next notifications will be ignored</string>
    <string name="ignore_future_notifications_confirmation">Are you sure you want to ignore future notifications?</string>
    <string name="ignore_future_notifications_package">Ignore future notifications with this package</string>
    <string name="ignore_future_notifications_package_alert">The next notifications with this package will be ignored</string>
    <string name="ignore_future_notifications_package_confirmation">Are you sure you want to ignore future notifications with this package?</string>
    <string name="inapp_thanks">Thank you :)</string>
    <string name="init_billing_client_connection_error">"An error has occurred.
Please check your internet connection and try again."</string>
    <string name="init_billing_client_error">"An error has occurred.
Please try again."</string>
    <string name="invalid_database">Database file is invalid</string>
    <string name="invalid_file">You must enter a valid file</string>
    <string name="invalid_folder">You must enter a valid folder</string>
    <string name="invalid_path">You must enter a valid path</string>
    <string name="large_donation_message">I really appreciate your work</string>
    <string name="large_donation_title">Large</string>
    <string name="loading">Loading...</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="mark_all_as_unread">Mark all as unread</string>
    <string name="mark_selected_as_read">Mark selected as read</string>
    <string name="mark_selected_as_unread">Mark selected as unread</string>
    <string name="maximum_donation_message">I really really want to support this project, great job!</string>
    <string name="maximum_donation_title">Maximum</string>
    <string name="medium_donation_message">I want to support this project</string>
    <string name="medium_donation_title">Medium</string>
    <string name="missing_text">Missing text</string>
    <string name="model_already_exists">This model already exists</string>
    <string name="model_deleted_successfully">Model deleted successfully</string>
    <string name="models">Models</string>
    <string name="models_deleted_successfully">Models deleted successfully</string>
    <string name="more_apps">More free apps</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="no_app_available">No application available to process this information</string>
    <string name="no_apps_installed">No apps installed</string>
    <string name="no_data">No data</string>
    <string name="no_group">"No group in the database.
Create new one by clicking the add button at the top right"</string>
    <string name="no_group_selected">No group selected</string>
    <string name="no_group_set">No group</string>
    <string name="no_info_meets_search_criteria">No information meets the search criteria</string>
    <string name="no_model">"No model in the database.
Create new one by clicking the add button at the top right"</string>
    <string name="no_notification_info">"No data.
The new notifications will be displayed in this list"</string>
    <string name="no_service">"No service in the database.
Create new one by clicking the add button at the top right"</string>
    <string name="notification_listener_settings">Notification listener settings</string>
    <string name="plus_version">Plus version</string>
    <string name="rate">Rate</string>
    <string name="refresh">Refresh</string>
    <string name="restore">Restore</string>
    <string name="restore_action">RESTORE</string>
    <string name="restore_database">Restore database</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="troubleshooting_info">If you are still facing problems with saving new notifications</string>
    <string name="tutorials">Tutorials</string>
    <string name="tutorials_info">Official Channel of Argon Dev - Android Apps on Google Play</string>
</resources>