<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ScrollView android:orientation="vertical" android:id="@id/vWelcome" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:padding="@dimen/menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:gravity="center_vertical" android:layout_gravity="center" android:id="@id/iWelcomeIndicator" android:padding="@dimen/menu_item_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_notifications_white_48dp" />
                <LinearLayout android:orientation="vertical" android:padding="@dimen/menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="20.0sp" android:gravity="center" android:id="@id/tWelcomeTitle" android:padding="@dimen/notification_module_padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_data" style="@style/GenericWhiteTextViewTitleStyle" />
                    <TextView android:textSize="18.0sp" android:gravity="center" android:id="@id/tWelcomeMessage" android:padding="@dimen/notification_module_padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_data" style="@style/GenericWhiteTextViewSubTitleStyle" />
                    <TextView android:textSize="16.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/tWelcomeSuggestion" android:padding="@dimen/notification_module_padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_data" style="@style/GenericWhiteTextViewSubTitleStyle" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/vHelp" android:background="@drawable/transparent_standard_drawable" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:padding="@dimen/menu_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <ImageView android:gravity="center_vertical" android:layout_gravity="center" android:padding="@dimen/menu_item_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_build_white_18dp" />
                        <LinearLayout android:orientation="vertical" android:padding="@dimen/menu_item_padding" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                            <TextView android:ellipsize="end" android:gravity="center_vertical" android:id="@id/tHelpLinkTitle" android:padding="@dimen/notification_module_padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/troubleshooting" android:singleLine="true" style="@style/GenericWhiteTextViewTitleStyle" />
                            <TextView android:gravity="center_vertical" android:id="@id/tHelpLinkDetail" android:padding="@dimen/notification_module_padding_small" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/troubleshooting_info" style="@style/GenericWhiteTextView3rdLevelStyle" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout android:orientation="horizontal" android:id="@id/vWelcomeAction" android:background="@drawable/white_standard_drawable" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
            <RelativeLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:padding="8.0dip" android:layout_width="@dimen/header_circle_radius_large" android:layout_height="@dimen/header_circle_radius_large">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_launcher" android:layout_centerInParent="true" />
            </RelativeLayout>
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="18.0sp" android:textColor="@color/blue_grey_900" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:singleLine="true" />
                <TextView android:textSize="16.0sp" android:textColor="@color/blue_grey_500" android:ellipsize="end" android:id="@id/tWelcomeAction" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enable_permission_action" android:singleLine="true" />
            </LinearLayout>
            <ImageView android:layout_gravity="center_vertical" android:id="@id/iWelcomeActionIndicator" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_touch_app_black_36dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>