<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/menu_item_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:padding="@dimen/menu_item_padding"
                    android:src="@mipmap/ic_info_black_48dp" />

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:padding="@dimen/menu_item_padding">

                    <TextView
                        android:id="@id/tHelpTitle"
                        style="@style/StandardTextViewTitleStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:padding="@dimen/notification_module_padding_small"
                        android:singleLine="true"
                        android:text="@string/no_data" />

                    <TextView
                        android:id="@id/tHelpDetail"
                        style="@style/StandardTextView3rdLevelStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="@dimen/notification_module_padding_small"
                        android:text="@string/no_data" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@id/vHelpTutorials"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_blue_500_standard_drawable"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/menu_item_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:padding="@dimen/menu_item_padding"
                    android:src="@mipmap/ic_play_arrow_white_18dp" />

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:padding="@dimen/menu_item_padding">

                    <TextView
                        style="@style/GenericWhiteTextViewTitleStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:padding="@dimen/notification_module_padding_small"
                        android:singleLine="true"
                        android:text="@string/tutorials" />

                    <TextView
                        style="@style/GenericWhiteTextView3rdLevelStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="@dimen/notification_module_padding_small"
                        android:text="@string/tutorials_info" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@id/vHelpTroubleshooting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_blue_500_standard_drawable"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/menu_item_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:padding="@dimen/menu_item_padding"
                    android:src="@mipmap/ic_build_white_18dp" />

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:padding="@dimen/menu_item_padding">

                    <TextView
                        style="@style/GenericWhiteTextViewTitleStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:padding="@dimen/notification_module_padding_small"
                        android:singleLine="true"
                        android:text="@string/troubleshooting" />

                    <TextView
                        style="@style/GenericWhiteTextView3rdLevelStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="@dimen/notification_module_padding_small"
                        android:text="@string/troubleshooting_info" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@id/vHelpSupport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/light_blue_500_standard_drawable"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/menu_item_padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:padding="@dimen/menu_item_padding"
                    android:src="@mipmap/ic_mail_white_18dp" />

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:padding="@dimen/menu_item_padding">

                    <TextView
                        style="@style/GenericWhiteTextViewTitleStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:padding="@dimen/notification_module_padding_small"
                        android:singleLine="true"
                        android:text="@string/contact_support" />

                    <TextView
                        style="@style/GenericWhiteTextView3rdLevelStyle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="@dimen/notification_module_padding_small"
                        android:text="@string/contact_support_info" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>